Simplify splunk-hec test SSL setup
Fixes #6709